# sokoban-bevy

./: Cargo.toml  README.md
levels/: AKK_Informatika.json  Easy_5_boxes.json  microban.json
levels/easy/: 81.json
levels/hard/: SokHard.json
levels/medium/: Novoban.json
levels/other/: AKK_Informatika.json
scripts/: xml_to_json.rs
src/: game.rs  loader.rs  main.rs  menu.rs
