[package]
name = "sokabona-bevy"
version = "0.1.0"
edition = "2024"
default-run = "sokabona-bevy"

[dependencies]
bevy = { version = "0.17.2", features = ["bmp"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"

[[bin]]
name = "xml_to_json"
path = "scripts/xml_to_json.rs"
